--- a/GoIT/markup/lesson1/lesson1.html
+++ b/GoIT/markup/lesson1/lesson1.html
@@ -3,51 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Homework #1</title>
-<style>
-	body{ 
-		background: #EEEEEE;}
-.menu {
-	height: 100%;
-	width: 50%;
-	border: 4px ridge;
-	margin-left: 25%;
-	margin-bottom: 5%;
-	background: white;
-}
-
-.b1 {
-	text-align: center;	
-}
-.a1 {
-	width: 70%;
-	text-align: left;
-	padding-left: 10%;
-	border-bottom: 2px groove black;
-	margin-left: 60px;
-	line-height: 25px;
-}
-.a2 {
-	margin-left: -25px;
-	
-}
-.a3	{
-    width: 70%;
-	text-align: left;
-	padding-left: 10%;
-	border-bottom: 2px groove black;
-	margin-left: 60px;
-	line-height: 10px;
-}
-.a4 {
-	width: 70%;
-	text-align: left;
-	padding-left: 10%;
-	padding-bottom: 5%;
-	margin-left: 60px;
-	line-height: 10px;
-}
-</style>
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="menu">
@@ -60,17 +16,17 @@
      <div class="a1">
   	   <span>Бажаю вчити Фронтенд тому, що :</span>
   	   <ul class="a2">
-  	 	 <li>Сучасна форма освіти нудна і непродуктивна;</li>
-  	 	 <li>Програмування викладають дідусі, які начиталися книжок;</li>
+  	     <li>Сучасна форма освіти нудна і непродуктивна;</li>
+  	     <li>Програмування викладають дідусі, які начиталися книжок;</li>
   	     <li>Втрачати роки молодості задарма якось не хочеться;</li>
   	   </ul>
       </div>
 
      <div class="a3">
-       <p>Мій номер телефону:</p>
-   	   <p>0636260043</p><br>
-   	   <p>Мій профіль Вконтакте:</p>
-   	   <p><a target="_blanc" href="http://vk.com/king_md">Макс Булло</a></p>
+        <p>Мій номер телефону:</p>
+   	<p>0636260043</p><br>
+   	<p>Мій профіль Вконтакте:</p>
+   	<p><a target="_blanc" href="http://vk.com/king_md">Макс Булло</a></p>
      </div>
 
      <div class="a4">
