--- a/GoIT/markup/lesson1/lesson1.html
+++ b/GoIT/markup/lesson1/lesson1.html
@@ -7,29 +7,29 @@
 </head>
 <body>
   <div class="menu">
-     <div class="b1">
+     <div class="block1">
        <h1>Булло Максим Дмитрович</h1>
        <img src="http://cs418421.vk.me/v418421583/49d0/PY0uoPX-y6w.jpg" height="300" alt="Фотка" title="Leipzig (((">
-       <p class="a1">Студент Київського коледжу зв'язку</p>
+       <p class="paragraph">Студент Київського коледжу зв'язку</p>
      </div>
 
-     <div class="a1">
+     <div class="paragraph">
   	   <span>Бажаю вчити Фронтенд тому, що :</span>
-  	   <ul class="a2">
-  	     <li>Сучасна форма освіти нудна і непродуктивна;</li>
-  	     <li>Програмування викладають дідусі, які начиталися книжок;</li>
+  	   <ul class="list">
+  	 	   <li>Сучасна форма освіти нудна і непродуктивна;</li>
+  	 	   <li>Програмування викладають дідусі, які начиталися книжок;</li>
   	     <li>Втрачати роки молодості задарма якось не хочеться;</li>
   	   </ul>
       </div>
 
-     <div class="a3">
-        <p>Мій номер телефону:</p>
-   	<p>0636260043</p><br>
-   	<p>Мій профіль Вконтакте:</p>
-   	<p><a target="_blanc" href="http://vk.com/king_md">Макс Булло</a></p>
+     <div class="block3">
+       <p>Мій номер телефону:</p>
+   	   <p>0636260043</p><br>
+   	   <p>Мій профіль Вконтакте:</p>
+   	   <p><a target="_blanc" href="http://vk.com/king_md">Макс Булло</a></p>
      </div>
 
-     <div class="a4">
+     <div class="block4">
        <p>Мій фідбек:</p>
        <p>Відремонтую холодильник я ж "КОМП'ЮТОРЩИК"</p>
      </div>
