--- a/GoIT/markup/lesson1/lesson1.html
+++ b/GoIT/markup/lesson1/lesson1.html
@@ -4,32 +4,33 @@
 <meta charset="UTF-8">
 <title>Homework #1</title>
 <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  <div class="menu">
-     <div class="block1">
+  <div class="model">
+     <div class="user_photo_information">
        <h1>Булло Максим Дмитрович</h1>
-       <img src="http://cs418421.vk.me/v418421583/49d0/PY0uoPX-y6w.jpg" height="300" alt="Фотка" title="Leipzig (((">
+       <img  src="1.png" height="170" alt="Фотка" title="Leipzig (((" style="border-radius: 15px;">
        <p class="paragraph">Студент Київського коледжу зв'язку</p>
      </div>
 
      <div class="paragraph">
   	   <span>Бажаю вчити Фронтенд тому, що :</span>
-  	   <ul class="list">
+  	    <ul class="list">
   	 	   <li>Сучасна форма освіти нудна і непродуктивна;</li>
   	 	   <li>Програмування викладають дідусі, які начиталися книжок;</li>
   	     <li>Втрачати роки молодості задарма якось не хочеться;</li>
-  	   </ul>
+  	    </ul>
       </div>
 
-     <div class="block3">
+     <div class="user_contacts">
        <p>Мій номер телефону:</p>
    	   <p>0636260043</p><br>
    	   <p>Мій профіль Вконтакте:</p>
    	   <p><a target="_blanc" href="http://vk.com/king_md">Макс Булло</a></p>
      </div>
 
-     <div class="block4">
+     <div class="user_feedback">
        <p>Мій фідбек:</p>
        <p>Відремонтую холодильник я ж "КОМП'ЮТОРЩИК"</p>
      </div>
