--- a/GoIT/markup/lesson1/lesson1.html
+++ b/GoIT/markup/lesson1/lesson1.html
@@ -9,8 +9,8 @@
 <body>
   <div class="model">
      <div class="user_photo_information">
-       <h1>Булло Максим Дмитрович</h1>
-       <img  src="1.png" height="170" alt="Фотка" title="Leipzig (((" style="border-radius: 15px;">
+       <h2>Булло Максим Дмитрович</h2>
+       <img  src="http://cs418421.vk.me/v418421583/49d0/PY0uoPX-y6w.jpg" height="170" alt="Фотка" title="Leipzig (((" style="border-radius: 15px;">
        <p class="paragraph">Студент Київського коледжу зв'язку</p>
      </div>
 
