--- a/GoIT/markup/lesson1/lesson1.html
+++ b/GoIT/markup/lesson1/lesson1.html
@@ -10,7 +10,7 @@
   <div class="model">
      <div class="user_photo_information">
        <h2>Булло Максим Дмитрович</h2>
-       <img  src="http://cs418421.vk.me/v418421583/49d0/PY0uoPX-y6w.jpg" height="170" alt="Фотка" title="Leipzig (((" style="border-radius: 15px;">
+       <img  src="https://avatars2.githubusercontent.com/u/15038136?v=3&s=460" height="170" alt="Фотка" title="Leipzig (((" style="border-radius: 15px;">
        <p class="paragraph">Студент Київського коледжу зв'язку</p>
      </div>
 
