--- a/GoIT/html/homework/hw3/index.html
+++ b/GoIT/html/homework/hw3/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="bot_menu">
         <span class="punkt_bot_menu">Главная</span>
-        <span class="punkt_bot_menu"></span>Товары</span>
+        <span class="punkt_bot_menu">Товары</span>
         <span class="punkt_bot_menu">О_нас</span>
         <span class="punkt_bot_menu">Контакты</span>
         <span class="punkt_bot_menu_copy">2014 &copy All rights reserved</span>
