--- a/GoIT/html/homework/hw3/index.html
+++ b/GoIT/html/homework/hw3/index.html
@@ -7,38 +7,48 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!--HEADER-->
   <div class="main">
     <p class="header">Fitness</p>
+<!--TOP MENU-->
       <div class="top_menu">
-        <span class="punkt_top_menu">Главная</span>
-        <span class="punkt_top_menu">Товары</span>
-        <span class="punkt_top_menu">О_нас</span>
-        <span class="punkt_top_menu">Контакты</span>
+         <ul class="punkt_top_menu">
+           <li><a href="#">Главная</a></li>
+           <li><a href="#">Товары</a></li>
+           <li><a href="#">О_нас</a></li>
+           <li><a href="#">Контакты</a></li>
+         </ul>
       </div>
+<!--LEFT MENU-->
       <div class="left_menu">
-        <span class="punkt_left_menu">Ноутбуки</span>
-        <span class="punkt_left_menu">Планшеты</span>
-        <span class="punkt_left_menu">Телефоны</span>
-        <span class="punkt_left_menu">Телевизоры</span>
-        <span class="punkt_left_menu">Бытовая техника</span>
-        <span class="punkt_left_menu">Автотовары</span>
+         <ul class="punkt_left_menu">
+           <li><a href="#">Ноутбуки</a></li>
+           <li><a href="#">Планшеты</a></li>
+           <li><a href="#">Телефоны</a></li>
+           <li><a href="#">Телевизоры</a></li>
+           <li><a href="#">Бытовая техника</a></li>
+           <li><a href="#">Автотовары</a></li>
+         </ul>
       </div>
-      <div class="image">
-        <img src="img/bicycle1.jpg" alt="bicycle">
+<!--CONTENT-->
+      <div class="content">
+          <div class="frame">
+          <img class="image" src="img/bicycle1.jpg" alt="bicycle">
+          </div>
+          <p class="description">
+            Мы серьезно относимся к придумыванию имен наших велосипедов. Это важное событие, проходящее в загородных резиденциях с участием фокус-групп (шутка). Красота этого велосипеда заключена в его имени. Возможно самый лучший в мире горный велосипед планеты за свою цену, Blast вызвал больше счастливых улыбок, чем мы можем подсчитать. Легкие и крепкие, обработанные по технологии SPF баттированные трубы в 2013 из скандиевого сплава алюминия, отличные характеристики и проверенная гонками геометрия — на радость миллионов.
+          </p>
       </div>
-      <div class="description">
-        <p>
-          Мы серьезно относимся к придумыванию имен наших велосипедов. Это важное событие, проходящее в загородных резиденциях с участием фокус-групп (шутка). Красота этого велосипеда заключена в его имени. Возможно самый лучший в мире горный велосипед планеты за свою цену, Blast вызвал больше счастливых улыбок, чем мы можем подсчитать. Легкие и крепкие, обработанные по технологии SPF баттированные трубы в 2013 из скандиевого сплава алюминия, отличные характеристики и проверенная гонками геометрия — на радость миллионов.
-        </p>
-      </div>
+<!--FOOTER-->
       <div class="bot_menu">
-        <span class="punkt_bot_menu">Главная</span>
-        <span class="punkt_bot_menu">Товары</span>
-        <span class="punkt_bot_menu">О_нас</span>
-        <span class="punkt_bot_menu">Контакты</span>
-        <span class="punkt_bot_menu_copy">2014 &copy All rights reserved</span>
+         <ul class="punkt_bot_menu">
+           <li><a href="#">Главная</a></li>
+           <li><a href="#">Товары</a></li>
+           <li><a href="#">О_нас</a></li>
+           <li><a href="#">Контакты</a></li>
+           <li class="punkt_bot_menu_copy">2014 &copy All rights reserved</li>
+         </ul>
       </div>
-  </div>
-  
+  </div>  
 </body>
 </html>
