--- a/GoIT/html/homework/hw4/index.html
+++ b/GoIT/html/homework/hw4/index.html
@@ -31,7 +31,7 @@
         	<ul class="menu">
         		<li><a href="">Главная</a></li>
         		<li>
-        		   <a href="">Путешествие &#9660;</a>
+        		   <a href="">Путешествие <span class="spec">&#9660</span></a>
         		   <ul>
         		   	  <li><a href="">Путешествие 1</a></li>
         		   	  <li><a href="">Путешествие 2</a></li>
@@ -41,7 +41,7 @@
         		   </ul>
         		</li>
         		<li>
-        		   <a href="">Услуги &#9660;</a>
+        		   <a href="">Услуги <span class="spec">&#9660</span></a>
         		   <ul>
         		   	  <li><a href="">Услуга 1</a></li>
         		   	  <li><a href="">Услуга 2</a></li>
@@ -50,7 +50,7 @@
         		   </ul>
         		</li>
         		<li>
-        		   <a href="">Партнерам &#9660;</a>
+        		   <a href="">Партнерам <span class="spec">&#9660</span></a>
         		   <ul>
         		   	   <li><a href="">Партнерам 1</a></li>
         		   	   <li><a href="">Партнерам 2</a></li>
