added homework 6 and updated homework 5

--- a/GoIT/html/homework/hw5part1/index.html
+++ b/GoIT/html/homework/hw5part1/index.html
@@ -32,8 +32,8 @@
 		 		<p>Cadastre-se</p>
 		 	</div>
 		 	<div class="second_container">
-		 	    <a href=""><img src="img/facebook.png"></a>
-		 		<img src="img/OU.png">
+		 	    <a class="facebook" href=""><span class="f">f</span><span class="login">Log In with Facebook      &#62</span></a>
+		 		<img class="clearfix" src="img/OU.png">
 		 	    <form action="#">
 		 		    <input class="form_punkt" type= "text" name= "firstname" placeholder="First Name">
 				    <input class="form_punkt" type= "text" name= "lastname" placeholder="Last Name">
