--- a/GoIT/html/homework/hw6/index.html
+++ b/GoIT/html/homework/hw6/index.html
@@ -178,15 +178,33 @@
 		         <form action="#">
 		          <a class="ul_header_right" href="#"><img src="img/wheel.png">ШИНЫ</a>
 		            <ul>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 1"><label for="Brend 1">Бренд 1</label></li>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 2"><label for="Brend 2">Бренд 2</label></li>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 3"><label for="Brend 3">Бренд 3</label></li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 1">
+		         	      <label for="Brend 1">Бренд 1</label>
+		         	   </li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 2">
+		         	      <label for="Brend 2">Бренд 2</label>
+		         	   </li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 3">
+		         	      <label for="Brend 3">Бренд 3</label>
+		         	   </li>
 		         	</ul>
 		          <a class="ul_header_2_right" href="#"><img src="img/disk.png">ДИСКИ</a>	         
 		            <ul>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 1"><label for="Brend 1">Бренд 1</label></li>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 2"><label for="Brend 2">Бренд 2</label></li>
-		         	   <li><input class="checkbox" type="checkbox" name="Brend 3"><label for="Brend 3">Бренд 3</label></li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 1">
+		         	      <label for="Brend 1">Бренд 1</label>
+		         	   </li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 2">
+		         	      <label for="Brend 2">Бренд 2</label>
+		         	   </li>
+		         	   <li class="checkbox">
+		         	      <input type="checkbox" name="Brend 3">
+		         	      <label for="Brend 3">Бренд 3</label>
+		         	   </li>
 		         	</ul>
                    <input class="submit" type="submit" value="ВЫБРАТЬ">
 		          </form>
