--- a/GoIT/html/homework/hw6/index.html
+++ b/GoIT/html/homework/hw6/index.html
@@ -179,31 +179,31 @@
 		          <a class="ul_header_right" href="#"><img src="img/wheel.png">ШИНЫ</a>
 		            <ul>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 1">
-		         	      <label for="Brend 1">Бренд 1</label>
+		         	      <input id="Brend_1_wheel" type="checkbox" name="Brend_1_wheel">
+		         	      <label for="Brend_1_wheel">Бренд 1</label>
 		         	   </li>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 2">
-		         	      <label for="Brend 2">Бренд 2</label>
+		         	      <input id="Brend_2_wheel" type="checkbox" name="Brend_2_wheel">
+		         	      <label for="Brend_2_wheel">Бренд 2</label>
 		         	   </li>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 3">
-		         	      <label for="Brend 3">Бренд 3</label>
+		         	      <input id="Brend_3_wheel" type="checkbox" name="Brend_3_wheel">
+		         	      <label for="Brend_3_wheel">Бренд 3</label>
 		         	   </li>
 		         	</ul>
 		          <a class="ul_header_2_right" href="#"><img src="img/disk.png">ДИСКИ</a>	         
 		            <ul>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 1">
-		         	      <label for="Brend 1">Бренд 1</label>
+		         	      <input id="Brend_1_disk" type="checkbox" name="Brend_1_disk">
+		         	      <label for="Brend_1_disk">Бренд 1</label>
 		         	   </li>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 2">
-		         	      <label for="Brend 2">Бренд 2</label>
+		         	      <input id="Brend_2_disk" type="checkbox" name="Brend_2_disk">
+		         	      <label for="Brend_2_disk">Бренд 2</label>
 		         	   </li>
 		         	   <li class="checkbox">
-		         	      <input type="checkbox" name="Brend 3">
-		         	      <label for="Brend 3">Бренд 3</label>
+		         	      <input id="Brend_3_disk" type="checkbox" name="Brend_3_disk">
+		         	      <label for="Brend_3_disk">Бренд 3</label>
 		         	   </li>
 		         	</ul>
                    <input class="submit" type="submit" value="ВЫБРАТЬ">
