--- a/GoIT/html/homework/EXAM/index.html
+++ b/GoIT/html/homework/EXAM/index.html
@@ -126,6 +126,9 @@
 			</div>
 			<a class="about__link about__link--blog__link" href="#">READ MORE HERE</a>				
 		 </section>
+	</section>
+	</div>
+	<div class="brends__background">
 		 <section class="brends">
 		 	<a class="brend" href="#"></a>
 		 	<a class="brend brend--2" href="#"></a>
@@ -134,7 +137,6 @@
 		 	<a class="brend brend--5" href="#"></a>
 		 	<a class="brend brend--6" href="#"></a>
 		 </section>
-	</section>
 	</div>
 	<!-- FOOTER -->
 	<footer>
