renamed works and updated lessons 7-8

--- a/GoIT/javascript/lessons 7-8/form/index.html
+++ b/GoIT/javascript/lessons 7-8/form/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>FORM</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -12,19 +12,17 @@
 	<form action="#" class="forma">
 		<div class="field">
 		   <span>Firstname</span>
-		   <input id=1 type="text">
-		   <label class="label" for="1">Please provide your firstname</label>
+		   <input class="text" id=1 type="text" value="">
 	    </div>
 	    <div class="field">
 	       <span>Lastname</span>
-		   <input class="text__2" id=2 type="text">
-		   <label class="label" for="2">Please provide also your lastname</label>
+		   <input class="text text--2" id=2 type="text">
 		</div>
 		<div class="field">
-		   <span>Address  </span>
-		   <input class="text__3" id=3 type="text">
-		   <label class="label" for="3">Your  home or work  address</label>
+		   <span>Address</span>
+		   <input class="text text--3" id=3 type="text">		   
 		</div>
+		<input class="submit" type="submit" value="PUSH">
 	</form>
 </body>
 </html>
