--- a/GoIT/javascript/lessons 7-8/tabs/index.html
+++ b/GoIT/javascript/lessons 7-8/tabs/index.html
@@ -11,17 +11,17 @@
 <body>
 	<div class="wrapper clearfix">
 		<ul class="tab__menu clearfix">
-			<li class="tab__item">Nunc tincidunt</li>
+			<li class="tab__item tab__item--checked">Nunc tincidunt</li>
 			<li class="tab__item">Proin dolor</li>
 			<li class="tab__item">Aenean lacinia</li>
 		</ul>
 		<p class="tab__text">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, voluptates officiis? In natus impedit deleniti tempora, labore non eveniet quam dolore reiciendis quidem et soluta rem odio dicta corrupti, perspiciatis.
 		</p>
-		<p class="tab__text">
+		<p class="tab__text tab__text--none">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum perspiciatis quaerat animi ipsa, earum, nihil iste perferendis maxime eius veritatis pariatur magnam. Illo molestias explicabo fugit ea, voluptatum laudantium dolores!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur fuga asperiores commodi corporis soluta, quod sed ab temporibus dicta. Minus, nisi iste ab, expedita incidunt adipisci distinctio natus velit ipsam.
 		</p>
-		<p class="tab__text">
+		<p class="tab__text tab__text--none">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae officiis sapiente harum, sunt voluptates magni molestias consequatur, deserunt repellat aspernatur cum debitis molestiae architecto quis placeat sed minima. Et, repellendus!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque obcaecati, saepe sit nulla tempora. Cum autem omnis, maxime quasi officia reiciendis id accusantium sapiente, odit doloribus dolore, perspiciatis consequuntur at.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolore veritatis explicabo quod ullam sunt mollitia similique officia dignissimos tenetur, officiis, fugit numquam, at molestias. Veniam ducimus dolores dolore officia?
 		</p>
 	</div>
