updated lessons 7-8 form js

--- a/GoIT/javascript/lessons 7-8/form/index.html
+++ b/GoIT/javascript/lessons 7-8/form/index.html
@@ -12,15 +12,15 @@
 	<form action="#" class="forma">
 		<div class="field">
 		   <span>Firstname</span>
-		   <input class="text" id=1 type="text" value="">
+		   <input title="Please provide your firstname" class="text" type="text">
 	    </div>
 	    <div class="field">
 	       <span>Lastname</span>
-		   <input class="text text--2" id=2 type="text">
+		   <input title="Please provide also your lastname" class="text text--2" type="text">
 		</div>
 		<div class="field">
 		   <span>Address</span>
-		   <input class="text text--3" id=3 type="text">		   
+		   <input title="Your  home or work  address" class="text text--3" type="text">		   
 		</div>
 		<input class="submit" type="submit" value="PUSH">
 	</form>
