added lessons 9-10, updated lessons 7-8

--- a/GoIT/javascript/lessons 7-8/form/index.html
+++ b/GoIT/javascript/lessons 7-8/form/index.html
@@ -22,7 +22,7 @@
 		   <span>Address</span>
 		   <input title="Your  home or work  address" class="text text--3" type="text">		   
 		</div>
-		<input class="submit" type="submit" value="PUSH">
+		<input class="button" type="button" value="PUSH">
 	</form>
 </body>
 </html>
