--- a/GoIT/javascript/lessons 7-8/form/index.html
+++ b/GoIT/javascript/lessons 7-8/form/index.html
@@ -9,7 +9,7 @@
     <script src="js/script.js"></script> 
 </head>
 <body>
-	<form action="#" class="forma">
+	<form action="#" class="form">
 		<div class="field">
 		   <span>Firstname</span>
 		   <input title="Please provide your firstname" class="text" type="text">
