--- a/GoIT/javascript/lessons 11-12/slider/index.html
+++ b/GoIT/javascript/lessons 11-12/slider/index.html
@@ -9,23 +9,23 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-  <div class="carousel-arrow-left"><span>Влево</span></div>
+  <div class="carousel-arrow-left"><img src="img/arrow_left.jpg" alt=""></div>
   <div class="carousel-hider">
     <ul class="carousel-list">
-      <li class="carousel-element"><img src="img/1.jpg"><p>Описание 1</p></li>
-      <li class="carousel-element"><img src="img/2.jpg"><p>Описание 2</p></li>
-      <li class="carousel-element"><img src="img/3.jpg"><p>Описание 3</p></li>
-      <li class="carousel-element"><img src="img/4.jpg"><p>Описание 4</p></li>
-      <li class="carousel-element"><img src="img/5.jpg"><p>Описание 5</p></li>
-      <li class="carousel-element"><img src="img/6.jpg"><p>Описание 6</p></li>
-      <li class="carousel-element"><img src="img/1.jpg"><p>Описание 7</p></li>
-      <li class="carousel-element"><img src="img/2.jpg"><p>Описание 8</p></li>
-      <li class="carousel-element"><img src="img/3.jpg"><p>Описание 9</p></li>
-      <li class="carousel-element"><img src="img/4.jpg"><p>Описание 10</p></li>
-      <li class="carousel-element"><img src="img/5.jpg"><p>Описание 11</p></li>
-      <li class="carousel-element"><img src="img/6.jpg"><p>Описание 12</p></li>
+      <li class="carousel-element"><img src="img/1.jpg"><p class="text">Описание 1</p></li>
+      <li class="carousel-element"><img src="img/2.jpg"><p class="text">Описание 2</p></li>
+      <li class="carousel-element"><img src="img/3.jpg"><p class="text">Описание 3</p></li>
+      <li class="carousel-element"><img src="img/4.jpg"><p class="text">Описание 4</p></li>
+      <li class="carousel-element"><img src="img/5.jpg"><p class="text">Описание 5</p></li>
+      <li class="carousel-element"><img src="img/6.jpg"><p class="text">Описание 6</p></li>
+      <li class="carousel-element"><img src="img/1.jpg"><p class="text">Описание 7</p></li>
+      <li class="carousel-element"><img src="img/2.jpg"><p class="text">Описание 8</p></li>
+      <li class="carousel-element"><img src="img/3.jpg"><p class="text">Описание 9</p></li>
+      <li class="carousel-element"><img src="img/4.jpg"><p class="text">Описание 10</p></li>
+      <li class="carousel-element"><img src="img/5.jpg"><p class="text">Описание 11</p></li>
+      <li class="carousel-element"><img src="img/6.jpg"><p class="text">Описание 12</p></li>
     </ul>
   </div>
-  <div class="carousel-arrow-right"><span>Вправо</span></div>
+  <div class="carousel-arrow-right"><img src="img/arrow_right.jpg" alt=""></div>
 </body>
 </html>
